--- a/references/references.bib
+++ b/references/references.bib
@@ -18,3 +18,10 @@
   year={2015},
   publisher={O'Reilly Media Canada, Inc.}
 }
+
+@book{forbes2017learning,
+  title={Learning Concurrency in Python},
+  author={Forbes, Elliot},
+  year={2017},
+  publisher={Packt Publishing Ltd}
+}
