--- a/reports/factorizacion_numeros_primos.tex
+++ b/reports/factorizacion_numeros_primos.tex
@@ -8,32 +8,12 @@
 \usepackage{hyperref}
 \usepackage[spanish,es-tabla,es-nodecimaldot]{babel}
 \usepackage{multirow}
-\usepackage{listings}
-\usepackage{color}
+\usepackage{color} 
+\usepackage{listings} 
+\usepackage{setspace} 
+\usepackage[a4paper,top=1cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}  
 
-\definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
-
-\lstset{frame=tb,
-  language=Python,
-  aboveskip=3mm,
-  belowskip=3mm,
-  showstringspaces=false,
-  columns=flexible,
-  basicstyle={\small\ttfamily},
-  numbers=none,
-  numberstyle=\tiny\color{gray},
-  keywordstyle=\color{blue},
-  commentstyle=\color{dkgreen},
-  stringstyle=\color{mauve},
-  breaklines=true,
-  breakatwhitespace=true,
-  tabsize=3
-}
-
-\usepackage[a4paper,top=1cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry} 
-%\pgfplotstableread[col sep=comma]{tables/resumen_cinco_numero_serpientes.csv}\ResumenCincoNumeros
+\input{specifications}
 
 
 \begin{document}
@@ -41,7 +21,8 @@
 \author{Ana Maritza Bello Yañez}
 \maketitle
 
-\section{Descripción del problema}
+
+%\section{Descripción del problema}
 % ¿Qué se quiere hacer?
 
 \section{Justificación del problema}
@@ -144,21 +125,9 @@ grandes de 100 dígitos. Puede usar técnicas similares de usar bits de entrada
 para analizar otros algoritmos que tienen un número fijo de entradas \cite{stephens2015learning}.
 
 \section{Resultados y conclusiones}
-
-\begin{lstlisting}
-def calculatePrimeFactors(n):
-    primfac = []
-    d = 2
-    while d * d <= n:
-        while (n % d) == 0:
-            primfac.append(d)
-            n //= d
-        d += 1
-    if n > 1:
-        primfac.append(n)
-    return primfac
-
-\end{lstlisting}
+ 
+\lstinputlisting[language=Python]{../src/N17_euclidex1.py} 
+ 
     
 
 \bibliography{../references/references.bib} 
