--- a/references/references.bib
+++ b/references/references.bib
@@ -1,3 +1,10 @@
+@book{forbes2017learning,
+  title={Learning Concurrency in Python},
+  author={Forbes, Elliot},
+  year={2017},
+  publisher={Packt Publishing Ltd}
+}
+
 @book{lewinter2015elementary,
   title={Elementary number theory with programming},
   author={Lewinter, Marty and Meyer, Jeanine},
@@ -19,9 +26,16 @@
   publisher={O'Reilly Media Canada, Inc.}
 }
 
-@book{forbes2017learning,
-  title={Learning Concurrency in Python},
-  author={Forbes, Elliot},
-  year={2017},
-  publisher={Packt Publishing Ltd}
+@book{stephens2019essential,
+  title={Essential algorithms: a practical approach to computer algorithms using Python and C},
+  author={Stephens, Rod},
+  year={2019},
+  publisher={John Wiley \& Sons}
+}
+
+@book{sedgewick2015introduction,
+  title={Introduction to programming in Python: An interdisciplinary approach},
+  author={Sedgewick, Robert and Wayne, Kevin and Dondero, Robert},
+  year={2015},
+  publisher={Addison-Wesley Professional}
 }
