--- a/reports/factorizacion_numeros_primos.tex
+++ b/reports/factorizacion_numeros_primos.tex
@@ -22,55 +22,56 @@
 \maketitle
 
 
-%\section{Descripción del problema}
-% ¿Qué se quiere hacer?
-
-\section{Justificación del problema}
-% ¿Por qué es importante resolver este problema?
-
-\section{Estado del arte}
-% Qué se ha hecho hasta ahora?
-
-¿Cómo se analiza el rendimiento en el tiempo de ejecución?
-
-Para 
-
-
-\section{Solución}
-% ¿Cómo se piensa resolver este problema?
-
-
-
-TEOREMA:
-La descomposición en primos de cualquier entero positivo mayor que 1 es única,
-excepto por el orden en que se escriben los factores primos \cite{lewinter2015elementary}.
+\section{Descripción del problema}
 
 La descomposición en factores primos es un concepto de la teoría de números que
 se refiere a la descomposición de un número en el producto de dos números
 primos. La factorización prima es un subconjunto de la factorización de enteros,
 en la que un número compuesto se factoriza en el producto de dos enteros
-cualesquiera.
+cualesquiera. Parte del teorema que estipula que la descomposición en primos de
+cualquier entero positivo mayor que 1 es única, excepto por el orden en que se
+escriben los factores primos \cite{lewinter2015elementary}.
+
+Los números primos juegan papeles importantes en algunas aplicaciones donde sus
+propiedades especiales hacen que ciertas operaciones sean más fáciles o más
+difíciles. Por ejemplo, algunos tipos de criptografía utilizan el producto de
+dos grandes números primos para brindar seguridad. El hecho de que sea difícil
+factorizar un número que es el producto de dos números primos grandes es lo que
+hace que el algoritmo sea seguro \cite{stephens2019essential}.
 
 Es un desafío encontrar los factores de los semiprimos (números que resultan del
 producto de dos números primos) porque tienen solo un par de factores, y la
 complejidad de encontrar los factores aumenta a medida que el tamaño del número
 primo se usa en el producto aumenta. No existe un algoritmo de factorización
 eficiente conocido para encontrar factores cuando los números son de cierto
-tamaño. RSA usa factorización prima, suponiendo que es realmente difícil
-encontrar la clave privada del producto expuesto de números primos. Esta
-supuesta dificultad es la razón detrás del uso de la factorización prima en
-criptografía \cite{raj2019foundations}.
+tamaño. 
 
-criptosistema RSA \cite{raj2019foundations}.
+RSA (por sus siglas en inglés Rivest-Shamir-Adleman) es un criptosistema de
+clave pública que se usa ampliamente para la transmisión segura de datos que usa
+factorización prima, suponiendo que es realmente difícil encontrar la clave
+privada del producto expuesto de números primos. Esta supuesta dificultad es la
+razón detrás del uso de la factorización prima en criptografía
+\cite{raj2019foundations}.
+
+
+\section{Justificación del problema}
+% ¿Por qué es importante resolver este problema?\
+
+Los números primos en criptografía son vitales para la seguridad de nuestros
+esquemas de cifrado. La factorización prima, también conocida como factorización
+de enteros, es un problema matemático que se utiliza para proteger los esquemas
+de cifrado de clave pública. Esto se logra mediante el uso de números semiprimos
+extremadamente grandes que son el resultado de la multiplicación de dos números
+primos \cite{sedgewick2015introduction}
+
 RSA es una de las implementaciones iniciales de criptografía público-privada.
 Utiliza el principio de factorización prima para generar un par de claves
-pública-privada, que actúa como una función de trampilla. El cifrado se realiza
-con la clave pública, que se distribuye a todo el mundo, y el descifrado se
-realiza con la clave privada guardada en secreto.
+pública-privada. El cifrado se realiza con la clave pública, que se distribuye a
+todo el mundo, y el descifrado se realiza con la clave privada guardada en
+secreto.
 
 La idea de un criptosistema de clave pública-privada asimétrica se atribuye a
 Whitfield Diffie y Martin Hellman, quienes publicaron este concepto en 1976.
-
 
 El par de claves pública y privada se calculan con la ayuda de dos grandes
 números primos. La clave pública se publica para el usuario y la clave privada
@@ -79,10 +80,76 @@ Siempre que los números primos utilizados sean grandes, no es factible calcular
 la clave privada a partir de la clave pública. Todo el criptosistema RSA se basa
 en el problema de la teoría de números de la factorización de enteros, lo que
 garantiza que la dificultad de la factorización prima sea proporcional al tamaño
-de los números primos utilizados.
+de los números primos utilizados \cite{raj2019foundations}.
 
 
-¿Cómo analiza el rendimiento del tiempo de ejecución de este algoritmo? 
+\section{Estado del arte}
+% Qué se ha hecho hasta ahora?
+
+Hasta la fecha no se ha publicado un algoritmo que pueda factorizar todos los
+enteros en tiempo polinomial; es decir no hay algún algoritmo conocido que pueda
+factorizar un número n gránde en tiempo $$ O(n^k)$$ para cualquier constante
+\textit{k}.
+
+Los algoritmos que resuelven este problema se dividen en dos dependiendo del
+tamaño del número de entrada y las características de este.
+
+Los algoritmos de categoría 1 o propósito específico son aquellos cuyo tiempo de
+ejecución depende del tamaño del factor primo más pequeño. Por ejemplo:
+
+\begin{itemize}
+\item División por tentativa
+\item Algorítmo Rho de Pollar
+\item Método de factorización de Fermat
+\end{itemize}
+
+Los algoritmos de categoría 2 o propósito general son aquellos cuyo tiempo de
+ejecución depende solamente del tamaño del entero a ser factorizado Por ejemplo:
+
+\begin{itemize}
+\item Algoritmo de Dixon
+\item Factorización con fracciones contínuas
+\item Criba cuadrática
+\item Criba racional
+\end{itemize}
+
+\subsection{Dificultad y complejidad}
+
+La forma más obvia de encontrar los factores principales de un número es
+intentar dividir el número por todos los números entre 2 y 1 menos que el
+número. Cuando un posible factor divide el número de manera uniforme, guarde el
+factor, divida el número y continúe intentando más factores posibles. Tenga en
+cuenta que debe intentar el mismo factor nuevamente antes de continuar en caso
+de que el número contenga más de una copia del factor
+\cite{stephens2019essential}.
+
+Por ejemplo, para encontrar los factores primos de 127, intentaría dividir 127
+por 2, 3, 4, 5, y así sucesivamente, hasta llegar a 126.
+
+Entonces, ¿cómo pasamos de un número a su factorización, es decir, su
+descomposición como producto de números primos? La forma más básica de
+factorizar un número, n, es intentar dividirlo por todos los números inferiores
+a este hasta que encuentre un número, x, que divide N. luego intente dividir n
+con el siguiente número, x + 1 y pronto. Terminarás con una lista de factores de
+N. ¿Cuál es la complejidad del tiempo de esto? Primero, recuerde que expresamos
+complejidades en función de la longitud de la entrada. La longitud de bits del
+número n es n = log2 N. Por la definición básica de logaritmo, esto significa
+que n = 2n. Debido a que todos los números inferiores a N/2 son suposiciones
+razonables para posibles factores de N, hay aproximadamente N/2 = 2n/2 valores
+para probar. La complejidad de nuestro algoritmo de factorización ingenuo es,
+por lo tanto, $$ O(2n)$$, ignorando el coeficiente 1/2 en la notación $$ O(2^n)$$.
+
+Por supuesto, muchos números son fáciles de tener en cuenta al encontrar primero
+factores pequeños (2, 3, 5, etc.) y luego factorizando iterativamente cualquier
+otro factor no de antaño. Pero aquí estamos interesados en el número de la
+forma n = P x Q, donde P y Q son grandes, como se encuentran en la criptografía.
+
+
+
+\section{Solución}
+% ¿Cómo se piensa resolver este problema?
+
+%¿Cómo analiza el rendimiento del tiempo de ejecución de este algoritmo? 
 
 Para la mayoría de los algoritmos, considera el tiempo de ejecución como una
 función de la cantidad de entradas. Sin embargo, este algoritmo solo tiene una
@@ -90,22 +157,22 @@ entrada: el número que está factorizando. El algoritmo tarda más en factoriza
 números grandes, por lo que no tiene sentido pensar en la cantidad de tiempo que
 tarda el algoritmo en función del valor 1. 
 
-Para algoritmos como este, el tiempo
-depende del tamaño de la entrada y no en el número de entradas. Así es como los
-analiza: observando el tamaño de la entrada. Puede pensar en esto como mirar la
-cantidad de bits en el valor que va a factorizar. Ignora cualquier bit de orden
-superior que sea cero. 
+Para algoritmos como este, el tiempo depende del tamaño de la entrada y no en el
+número de entradas. Así es como los analiza: observando el tamaño de la entrada.
+Puede pensar en esto como mirar la cantidad de bits en el valor que va a
+factorizar. Ignora cualquier bit de orden superior que sea cero. 
 
-Por ejemplo, el valor 1, almacenado en un entero de 64
-bits, aún ocupa 64 bits en la computadora. Pero en realidad solo estamos
-interesados en ese único bit que realmente usa el valor 1. Se necesitan bits
-Log n para representar el número n en binario. Aquí estoy usando n minúscula
-para recordar que estamos hablando del valor de la entrada y no del número de
-entradas. Si dejamos que N mayúscula sea el número de bits, entonces tenemos
-esta ecuación: la base logarítmica 2 de n pequeña es igual a N mayúscula. Si
-reorganizamos eso un poco, puede obtener esto: para n pequeña en términos de N
-mayúscula. Ahora, ¿qué podemos decir sobre el tiempo de ejecución del algoritmo
-de factorización? El peor caso para este algoritmo ocurre cuando el número de
+Por ejemplo, el valor 1, almacenado en un entero de 64 bits, aún ocupa 64 bits
+en la computadora. Pero en realidad solo estamos interesados en ese único bit
+que realmente usa el valor 1. Se necesitan bits de log(n) para representar el número
+n en binario. Aquí estoy usando n minúscula para recordar que estamos hablando
+del valor de la entrada y no del número de entradas. Si dejamos que N mayúscula
+sea el número de bits, entonces tenemos esta ecuación: la base logarítmica 2 de
+n pequeña es igual a N mayúscula. Si reorganizamos eso un poco, puede obtener
+esto: para n pequeña en términos de N mayúscula. Ahora, ¿qué podemos decir sobre
+el tiempo de ejecución del algoritmo de factorización? 
+
+El peor caso para este algoritmo ocurre cuando el número de
 entrada es primo. En ese caso, el programa examina posibles factores impares
 hasta llegar a la raíz cuadrada del número. El número de pasos que realiza para
 llegar a ese punto es la raíz cuadrada del número. Eso significa que el tiempo
@@ -114,26 +181,39 @@ convertir eso en una función que involucre el número de bits, N mayúscula,
 reemplazamos la n minúscula con esta ecuación que encontramos anteriormente. El
 resultado es que el tiempo de ejecución del algoritmo es raíz cuadrada del orden
 de 2 elevado a n. Podemos simplificar eso un poco, porque la raíz cuadrada de 2
-elevado a n es lo mismo que la raíz cuadrada de 2 elevado a n. Esto significa
-que el tiempo de ejecución del algoritmo es exponencial en el número de bits de
-entrada. Su tiempo de ejecución depende de potencias de la raíz cuadrada de 2,
-por lo que no crece tan rápido como lo haría si dependiera de potencias de 2 o
-algún número mayor. Pero una vez que la función crece, realmente despega, como
-lo hacen todas las funciones exponenciales. Es por eso que este algoritmo
-funciona para números moderadamente grandes pero no es práctico para números muy
-grandes de 100 dígitos. Puede usar técnicas similares de usar bits de entrada
-para analizar otros algoritmos que tienen un número fijo de entradas \cite{stephens2015learning}.
+elevado a n es lo mismo que la raíz cuadrada de 2 elevado a n. 
+
+Esto significa que el tiempo de ejecución del algoritmo es exponencial en el
+número de bits de entrada. Su tiempo de ejecución depende de potencias de la
+raíz cuadrada de 2, por lo que no crece tan rápido como lo haría si dependiera
+de potencias de 2 o algún número mayor. Pero una vez que la función crece,
+realmente despega, como lo hacen todas las funciones exponenciales. Es por eso
+que este algoritmo funciona para números moderadamente grandes pero no es
+práctico para números muy grandes de 100 dígitos. Puede usar técnicas similares
+de usar bits de entrada para analizar otros algoritmos que tienen un número fijo
+de entradas \cite{stephens2015learning}.
 
 \section{Resultados y conclusiones}
  
-\lstinputlisting[language=Python]{../src/N17_euclidex1.py} 
- 
-    
+
 
 \bibliography{../references/references.bib} 
 \bibliographystyle{apalike}
 
-Ejemplo de ecuacion
-$$ e^{i\pi} + 1 = 0 $$
+\pagebreak
+\section{Apéndice}
+
+\subsection{Algoritmos de factorización implementados}
+
+\lstinputlisting[language=Python]{../src/prime_number_fact.py}
+
+\pagebreak
+
+\section{Implementación del código de análisis de complejidad práctica}
+
+\lstinputlisting[language=Python]{../src/analizer.py}
+
+%\lstinputlisting[language=Python]{../src/plotter.py}
+
 
 \end{document}
