🔗 Add github link

--- a/reports/factorizacion_numeros_primos.tex
+++ b/reports/factorizacion_numeros_primos.tex
@@ -308,7 +308,8 @@ un algoritmo es más rápido que el otro, el principio en ambos es el mismo.
 \pagebreak
 \section{Apéndice}
 
-El trabajo presentado en este reporte también se puede consultar y descargar en 
+El trabajo presentado en este reporte también se puede consultar y clonar en
+este el repositorio de GitHub de \url{https://github.com/MaritzaB/prime_number_factorization/tree/feature/init_project}
 
 \subsection{Algoritmos de factorización implementados} \label{sec:algoritmos}
 
