🚨🎨 Fix code with pylint

--- a/reports/factorizacion_numeros_primos.tex
+++ b/reports/factorizacion_numeros_primos.tex
@@ -17,7 +17,7 @@
 
 
 \begin{document}
-\title{Factorización de números primos}
+\title{Factorización de números primos. \\ Proyecto de curso propedeutico para entrar al posgrado de Ciencias en Computación}
 \author{Ana Maritza Bello Yañez}
 \maketitle
 
